<resources>
    <string name="preference_file_key">com.mk.admin.payroll.PREFERENCE_FILE_KEY</string>
    <string name="app_name">Payroll</string>
    <string name="error_webservice">There is something wrong. Please try again after a while.</string>
    <string name="title_activity_login">Login</string>
    <string name="login">LOGIN</string>
    <string name="salary">Salary</string>
    <string name="menu">MENU</string>
    <string name="working"> Working</string>
    <string name="manage">Manage</string>
    <string name="human_reources">Human Resources</string>

    <string name="progress_message">Please wait</string>
    <string name="logout_question">Logout</string>
    <string name="logout_question_message">Are You Sure To Logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_message">You Are Logging Out</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overtime">Overtime</string>
    <string name="remuneration">Remuneration</string>
    <string name="employee">Employee</string>
    <string name="new_employee">New Employee</string>
    <string name="holiday">Holiday</string>
    <string name="new_overtime">New Overtime</string>
    <string name="employees_overtime">Employee\'s Overtime</string>
    <string name="profile">Profile</string>
    <string name="permission">Permission</string>
    <string name="working_hour">Working Hour</string>
    <string name="shift_in">Shift In</string>
    <string name="shift_out">Shift Out</string>
</resources>
