<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_working"
            android:title="@string/working">
            <menu>
                <item
                    android:id="@+id/profile_menu"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profile"/>
                <!--<item
                    android:id="@+id/calendar_menu"
                    android:icon="@drawable/ic_calendar"
                    android:title="Calendar" />-->
                <item
                    android:id="@+id/salary_menu"
                    android:icon="@drawable/basic_salary"
                    android:title="Salary" />
                <item
                    android:id="@+id/overtime"
                    android:icon="@drawable/ic_workhours"
                    android:title="@string/overtime"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/human_resource_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_human_resource"
            android:title="@string/human_reources">
            <menu>
                <item
                    android:id="@+id/employee_menu"
                    android:icon="@drawable/ic_person"
                    android:title="Employee" />
                <item
                    android:id="@+id/remuneration_menu"
                    android:icon="@drawable/ic_salary"
                    android:title="Remuneration" />
                <item
                    android:id="@+id/permission_menu"
                    android:icon="@drawable/permission"
                    android:title="@string/permission"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/manage_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item_manage"
            android:title="@string/manage">
            <menu>
                <item
                    android:id="@+id/req_overtime_menu"
                    android:icon="@drawable/ic_overtime"
                    android:title="Employees Overtime" />
            </menu>
        </item>
    </group>

</menu>
